--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: white;
+  background-color: Yellow;
 }
 
 h1 {
